--- a/samples/error.html
+++ b/samples/error.html
@@ -14,7 +14,7 @@
 <body>
   <h1>VideoJS5 Video</h1>
   <video id="video1" class="video-js vjs-default-skin" controls>
-    <source src="http://fastly.nicepeopleatwork.com.global.prod.fastly.net/video/sintel-1024-surround.mp4" type='video/mp4'>
+    <source src="error.mp4" type='video/mp4'>
     <p class="vjs-no-js">To view this video please enable JavaScript.</p>
   </video>
   <script>
