--- a/samples/hlsjs-vod.html
+++ b/samples/hlsjs-vod.html
@@ -6,6 +6,10 @@
   <link href="http://vjs.zencdn.net/5.8.8/video-js.css" rel="stylesheet">
   <script src="http://vjs.zencdn.net/5.8.8/video.js"></script>
   <!---->
+  <!-- HLS -->
+  <script src="https://cdn.jsdelivr.net/hls.js/latest/hls.min.js"></script>
+  <script src="lib/hlsjs-1.0.0/hls.js"></script>
+  <!-- -->
   <!-- YouboraLib -->
   <script src="../dist/sp.min.js"></script>
   <!---->
@@ -14,7 +18,7 @@
 <body>
   <h1>VideoJS5 Video</h1>
   <video id="video1" class="video-js vjs-default-skin" controls>
-    <source src="http://fastly.nicepeopleatwork.com.global.prod.fastly.net/video/sintel-1024-surround.mp4" type='video/mp4'>
+    <source src="http://qthttp.apple.com.edgesuite.net/1010qwoeiuryfg/sl.m3u8" type="application/x-mpegURL">
     <p class="vjs-no-js">To view this video please enable JavaScript.</p>
   </video>
   <script>
