--- a/samples/contrib-hls-live.html
+++ b/samples/contrib-hls-live.html
@@ -6,6 +6,9 @@
   <link href="http://vjs.zencdn.net/5.8.8/video-js.css" rel="stylesheet">
   <script src="http://vjs.zencdn.net/5.8.8/video.js"></script>
   <!---->
+  <!-- HLS -->
+  <script src="http://videojs.github.io/videojs-contrib-hls/node_modules/videojs-contrib-hls/dist/videojs.hls.min.js"></script>
+  <!-- -->
   <!-- YouboraLib -->
   <script src="../dist/sp.min.js"></script>
   <!---->
@@ -14,7 +17,7 @@
 <body>
   <h1>VideoJS5 Video</h1>
   <video id="video1" class="video-js vjs-default-skin" controls>
-    <source src="http://fastly.nicepeopleatwork.com.global.prod.fastly.net/video/sintel-1024-surround.mp4" type='video/mp4'>
+    <source src="http://wms.shared.streamshow.it/carinatv/carinatv/playlist.m3u8" type="application/x-mpegURL">
     <p class="vjs-no-js">To view this video please enable JavaScript.</p>
   </video>
   <script>
