--- a/samples/hlsjs-vod.html
+++ b/samples/hlsjs-vod.html
@@ -59,11 +59,10 @@
         // 'extraparam.2': 'myExtraParam2'
       })
 
-      plugin.setAdapter(new youbora.adapters.Videojs5(player))
+      plugin.setAdapter(new youbora.adapters.Videojs5(play))
     }
 
   </script>
-<script src="/src/v5/util/inspector/inspector.js"></script>
 </body>
 
 </html>
