--- a/samples/mp4.html
+++ b/samples/mp4.html
@@ -55,11 +55,9 @@
         // 'extraparam.2': 'myExtraParam2'
       })
 
-      plugin.setAdapter(new youbora.adapters.Videojs5(player))
-    }
+      plugin.setAdapter(new youbora.adapters.Videojs5(player))   }
 
   </script>
-<script src="/src/v5/util/inspector/inspector.js"></script>
 </body>
 
 </html>
