--- a/samples/ads/bcove-onceux.html
+++ b/samples/ads/bcove-onceux.html
@@ -2,11 +2,10 @@
 <html>
 
 <body>
-  <video data-video-id="4712872493001" data-account="2564185535001" data-player="EkutSUWnl" data-embed="default" class="video-js"
-    id="video1" controls></video>
-  <script src="//players.brightcove.net/2564185535001/EkutSUWnl_default/index.js"></script>
-  <!---->
-  <!-- YouboraLib -->
+  <video id="video1" data-account="2564185535001" data-player="rJi1Fb42" data-embed="default" data-application-id class="video-js"
+    controls></video>
+  <script src="//players.brightcove.net/2564185535001/rJi1Fb42_default/index.js"></script>
+  <!--YouboraLib -->
   <script src="../../dist/sp.min.js"></script>
   <!---->
   <script>
