--- a/samples/error.html
+++ b/samples/error.html
@@ -3,8 +3,8 @@
 
 <head>
   <!-- VideoJS -->
-  <link href="http://vjs.zencdn.net/5.8.8/video-js.css" rel="stylesheet">
-  <script src="http://vjs.zencdn.net/5.8.8/video.js"></script>
+  <link href="http://vjs.zencdn.net/5.14.1/video-js.css" rel="stylesheet">
+  <script src="http://vjs.zencdn.net/5.14.1/video.js"></script>
   <!---->
   <!-- YouboraLib -->
   <script src="../dist/sp.min.js"></script>
@@ -55,7 +55,8 @@
         // 'extraparam.2': 'myExtraParam2'
       })
 
-      plugin.setAdapter(new youbora.adapters.Videojs5(player))   }
+      plugin.setAdapter(new youbora.adapters.Videojs5(player))
+    }
 
   </script>
 </body>
