--- a/samples/contrib-hls-live.html
+++ b/samples/contrib-hls-live.html
@@ -3,8 +3,8 @@
 
 <head>
   <!-- VideoJS -->
-  <link href="http://vjs.zencdn.net/5.8.8/video-js.css" rel="stylesheet">
-  <script src="http://vjs.zencdn.net/5.8.8/video.js"></script>
+  <link href="http://vjs.zencdn.net/5.14.1/video-js.css" rel="stylesheet">
+  <script src="http://vjs.zencdn.net/5.14.1/video.js"></script>
   <!---->
   <!-- HLS -->
   <script src="http://videojs.github.io/videojs-contrib-hls/node_modules/videojs-contrib-hls/dist/videojs.hls.min.js"></script>
@@ -58,9 +58,8 @@
         // 'extraparam.2': 'myExtraParam2'
       })
 
-      plugin.setAdapter(new youbora.adapters.Videojs5(playe)
-    }
-
+      plugin.setAdapter(new youbora.adapters.Videojs5(playe
+       
   </script>
 </body>
 
