--- a/samples/hlsjs-live.html
+++ b/samples/hlsjs-live.html
@@ -3,8 +3,8 @@
 
 <head>
   <!-- VideoJS -->
-  <link href="http://vjs.zencdn.net/5.8.8/video-js.css" rel="stylesheet">
-  <script src="http://vjs.zencdn.net/5.8.8/video.js"></script>
+  <link href="http://vjs.zencdn.net/5.14.1/video-js.css" rel="stylesheet">
+  <script src="http://vjs.zencdn.net/5.14.1/video.js"></script>
   <!---->
   <!-- HLS -->
   <script src="https://cdn.jsdelivr.net/hls.js/latest/hls.min.js"></script>
@@ -59,8 +59,8 @@
         // 'extraparam.2': 'myExtraParam2'
       })
 
-      plugin.setAdapter(new youbora.adapters.Videojs5(play))
-    }
+      plugin.setAdapter(new youbora.adapters.Videojs5(play
+       
 
   </script>
 </body>
