--- a/samples/contrib-hls-live.html
+++ b/samples/contrib-hls-live.html
@@ -7,7 +7,7 @@
   <script src="http://vjs.zencdn.net/5.14.1/video.js"></script>
   <!---->
   <!-- HLS -->
-  <script src="http://videojs.github.io/videojs-contrib-hls/node_modules/videojs-contrib-hls/dist/videojs.hls.min.js"></script>
+  <script src="https://github.com/videojs/videojs-contrib-hls/releases/download/v5.3.3/videojs-contrib-hls.min.js"></script>
   <!-- -->
   <!-- YouboraLib -->
   <script src="../dist/sp.min.js"></script>
@@ -58,8 +58,9 @@
         // 'extraparam.2': 'myExtraParam2'
       })
 
-      plugin.setAdapter(new youbora.adapters.Videojs5(playe
-       
+      plugin.setAdapter(new youbora.adapters.Videojs5(player))
+    }
+
   </script>
 </body>
 
