separate in modules

--- a/samples/hlsjs-live.html
+++ b/samples/hlsjs-live.html
@@ -59,9 +59,8 @@
         // 'extraparam.2': 'myExtraParam2'
       })
 
-      plugin.setAdapter(new youbora.adapters.Videojs5(play
-       
-
+      plugin.setAdapter(new youbora.adapters.Videojs5(player))
+    }
   </script>
 </body>
 
