fix enviroments and bugs

--- a/samples/contrib-hls-vod.html
+++ b/samples/contrib-hls-vod.html
@@ -32,8 +32,8 @@
       window.plugin = new youbora.Plugin({
         'accountCode': 'nicedev',
         // 'username': 'dev',
-        // 'parse.HLS': true,
-        // 'parse.CDNNode': true,
+        // 'parse.hls': true,
+        // 'parse.cdnNode': true,
         // 'network.ip': '1.1.1.1',
         // 'network.isp': 'MyISP',
         // 'network.connectionType': 'dialup',
