--- a/samples/contrib-hls-live.html
+++ b/samples/contrib-hls-live.html
@@ -17,7 +17,7 @@
 <body>
   <h1>VideoJS5 Video</h1>
   <video id="video1" class="video-js vjs-default-skin" controls>
-    <source src="https://devstreaming-cdn.apple.com/videos/streaming/examples/img_bipbop_adv_example_ts/master.m3u8" type="application/x-mpegURL">
+    <source src="http://wms.shared.streamshow.it/carinatv/carinatv/playlist.m3u8" type="application/x-mpegURL">
     <p class="vjs-no-js">To view this video please enable JavaScript.</p>
   </video>
   <script>
