--- a/samples/ads/ima.html
+++ b/samples/ads/ima.html
@@ -41,7 +41,7 @@
     // Init youbora
     if (typeof youbora.adapters.Videojs5 != "undefined") {
       window.plugin = new youbora.Plugin({
-        'accountCode': 'nicedev',
+        'accountCode': 'powerdev',
         // 'username': 'dev',
         // 'parse.hls': true,
         // 'parse.cdnNode': true,
