--- a/samples/ads/ima.html
+++ b/samples/ads/ima.html
@@ -42,6 +42,7 @@
     if (typeof youbora.adapters.Videojs5 != "undefined") {
       window.plugin = new youbora.Plugin({
         'accountCode': 'powerdev',
+        'ad.afterStop': 1,
         // 'username': 'dev',
         // 'parse.hls': true,
         // 'parse.cdnNode': true,
