--- a/samples/hlsjslivepeer5.html
+++ b/samples/hlsjslivepeer5.html
@@ -2,13 +2,18 @@
 <html>
 
 <head>
+  <!-- Peer5 library -->
+  <script src="//api.peer5.com/peer5.js?id=p7vjk37y3p922ayzrznt"></script>
   <!-- VideoJS -->
   <link href="http://vjs.zencdn.net/5.14.1/video-js.css" rel="stylesheet">
   <script src="http://vjs.zencdn.net/5.14.1/video.js"></script>
   <!---->
   <!-- HLS -->
-  <script src="https://github.com/videojs/videojs-contrib-hls/releases/download/v5.3.3/videojs-contrib-hls.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/hls.js/latest/hls.min.js"></script>
+  <script src="lib/hlsjs-1.0.0/hls.js"></script>
   <!-- -->
+  <!-- Peer5 plugin for VideoJS 5 -->
+  <script src="//api.peer5.com/peer5.videojs5.plugin.js"></script>
   <!-- YouboraLib -->
   <script src="../dist/sp.min.js"></script>
   <!---->
@@ -39,7 +44,7 @@
         // 'network.connectionType': 'dialup',
         // 'content.transactionCode': 'myTransCode',
         // 'content.resource': 'mysrc.mp4',
-        'content.isLive': true,
+        // 'content.isLive': true,
         // 'content.title': 'My Title',
         // 'content.title2': 'My Title2',
         // 'content.duration': 100,
@@ -60,7 +65,6 @@
 
       plugin.setAdapter(new youbora.adapters.Videojs5(player))
     }
-
   </script>
 </body>
 
