--- a/samples/contrib-hls-live.html
+++ b/samples/contrib-hls-live.html
@@ -30,7 +30,7 @@
     // Init youbora
     if (typeof youbora.adapters.Videojs5 != "undefined") {
       window.plugin = new youbora.Plugin({
-        'accountCode': 'nicedev',
+        'accountCode': 'powerqa',
         // 'username': 'dev',
         // 'parse.hls': true,
         // 'parse.cdnNode': true,
