--- a/samples/hlsjs-vod.html
+++ b/samples/hlsjs-vod.html
@@ -31,7 +31,7 @@
     // Init youbora
     if (typeof youbora.adapters.Videojs5 != "undefined") {
       window.plugin = new youbora.Plugin({
-        'accountCode': 'nicedev',
+        'accountCode': 'powerqa',
         // 'username': 'dev',
         // 'parse.hls': true,
         // 'parse.cdnNode': true,
