--- a/samples/ads/ima.html
+++ b/samples/ads/ima.html
@@ -41,7 +41,7 @@
     // Init youbora
     if (typeof youbora.adapters.Videojs5 != "undefined") {
       window.plugin = new youbora.Plugin({
-        'accountCode': 'powerdev',
+        'accountCode': 'powerqa',
         'ad.ignore': false,
         'ad.afterStop': 1,
         // 'username': 'dev',
