--- a/samples/ads/brightcove.html
+++ b/samples/ads/brightcove.html
@@ -19,7 +19,7 @@ youbora.Log.logLevel = youbora.Log.Level.DEBUG
     // Init youbora
     if (typeof youbora.adapters.Videojs5 != "undefined") {
       window.plugin = new youbora.Plugin({
-        'accountCode': 'powerqa'
+        'accountCode': 'nicedev'
       })
 
       plugin.setAdapter(new youbora.adapters.Videojs5(player))
