--- a/samples/ads/v6ima.html
+++ b/samples/ads/v6ima.html
@@ -26,7 +26,7 @@
 </head>
 
 <body>
-  <h1>VideoJS5 Video</h1>
+  <h1>VideoJS6 Video</h1>
   <video id="video1" class="video-js vjs-default-skin" controls>
     <source src="http://media.w3.org/2010/05/sintel/trailer.mp4" type='video/mp4'>
     <p class="vjs-no-js">To view this video please enable JavaScript.</p>
@@ -46,7 +46,7 @@
     // Init youbora
     if (typeof youbora.adapters.Videojs5 != "undefined") {
       window.plugin = new youbora.Plugin({
-        'accountCode': 'powerdev',
+        'accountCode': 'nicedev',
         'ad.ignore': false,
         'ad.afterStop': 1,
         // 'username': 'dev',
