--- a/samples/ads/brightcove.html
+++ b/samples/ads/brightcove.html
@@ -17,12 +17,12 @@
 youbora.Log.logLevel = youbora.Log.Level.DEBUG
 
     // Init youbora
-    if (typeof youbora.adapters.Videojs5 != "undefined") {
+    if (typeof youbora.adapters.Videojs != "undefined") {
       window.plugin = new youbora.Plugin({
         'accountCode': 'nicedev'
       })
 
-      plugin.setAdapter(new youbora.adapters.Videojs5(player))
+      plugin.setAdapter(new youbora.adapters.Videojs(player))
     }
     </script>
     <script src="/src/v5/util/inspector/inspector.js"></script>
