--- a/samples/hlsjs-vod.html
+++ b/samples/hlsjs-vod.html
@@ -29,7 +29,7 @@
     youbora.Log.logLevel = youbora.Log.Level.DEBUG
 
     // Init youbora
-    if (typeof youbora.adapters.Videojs5 != "undefined") {
+    if (typeof youbora.adapters.Videojs != "undefined") {
       window.plugin = new youbora.Plugin({
         'accountCode': 'powerqa',
         // 'username': 'dev',
@@ -59,7 +59,7 @@
         // 'extraparam.2': 'myExtraParam2'
       })
 
-      plugin.setAdapter(new youbora.adapters.Videojs5(player))
+      plugin.setAdapter(new youbora.adapters.Videojs(player))
     }
   </script>
 </body>
