--- a/samples/ads/v6ima.html
+++ b/samples/ads/v6ima.html
@@ -46,7 +46,7 @@
     // Init youbora
     if (typeof youbora.adapters.Videojs != "undefined") {
       window.plugin = new youbora.Plugin({
-        'accountCode': 'nicedev',
+        'accountCode': 'powerdev',
         'ad.ignore': false,
         'ad.afterStop': 1,
         // 'username': 'dev',
@@ -58,7 +58,7 @@
         // 'content.transactionCode': 'myTransCode',
         // 'content.resource': 'mysrc.mp4',
         // 'content.isLive': true,
-        // 'content.title': 'My Title',
+        'content.title': '',
         // 'content.title2': 'My Title2',
         // 'content.duration': 100,
         // 'content.fps': '100',
