--- a/samples/ads/v6ima.html
+++ b/samples/ads/v6ima.html
@@ -46,7 +46,7 @@
     // Init youbora
     if (typeof youbora.adapters.Videojs != "undefined") {
       window.plugin = new youbora.Plugin({
-        'accountCode': 'powerdev',
+        'accountCode': 'powerqa',
         'ad.ignore': false,
         'ad.afterStop': 1,
         // 'username': 'dev',
